Se agrego un lorem

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Prueba GIT</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tempore asperiores ipsum necessitatibus sed architecto maxime officia totam. Similique odio non qui impedit voluptatem doloribus odit alias enim quo voluptatum?</p>
 </body>
 </html>
